[package]
name = "distributed-kv-store"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A distributed transactional key-value store built in Rust"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Networking
tonic = "0.10"
prost = "0.12"
tower = "0.4"

# HTTP server
warp = "0.3"
hyper = "0.14"
reqwest = { version = "0.11", features = ["json"] }

# Database and storage
sled = "0.34"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Time and UUID
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Concurrency
dashmap = "5.5"
crossbeam = "0.8"
parking_lot = "0.12"

# Configuration
config = "0.13"
clap = { version = "4.0", features = ["derive"] }

# Testing
proptest = "1.0"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"